[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/item/#2 - Transparent Icons & Drop Shadow.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/uibutton.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/scene/UI/ItemBoxGUI.gd" type="Script" id=3]

[node name="Item-0" type="PanelContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 57.0
mouse_filter = 1
toggle_mode = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 1 )
vframes = 27
hframes = 16
frame = 11

[node name="Stack" type="Label" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 2
[connection signal="mouse_entered" from="." to="." method="_on_Item0_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Item0_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
